gitops/infrastructure/traefik/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
spec:
  basicAuth:
    secret: traefik-dashboard-secret
